--- a/galleon/conf/derby.properties
+++ b/galleon/conf/derby.properties
@@ -1,5 +1,5 @@
 # Derby database configuration
-derby.storage.pageCacheSize=40
+#derby.storage.pageCacheSize=40
 derby.infolog.append=false
 #derby.language.logStatementText=true
 #derby.stream.error.file=d:/galleon/logs/derby.log
