--- a/galleon/conf/hibernate.properties
+++ b/galleon/conf/hibernate.properties
@@ -26,3 +26,6 @@ hibernate.dbcp.ps.maxWait=60000
 hibernate.dbcp.ps.maxIdle=2
 
 #hibernate.show_sql=true
+
+hibernate.query.substitutions=true 1, false 0
+hibernate.cache.use_query_cache=true
